--- a/1_GameDoubler/1_GameDoubler.csproj
+++ b/1_GameDoubler/1_GameDoubler.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FAF33413-7F0C-43DE-B99B-84C36157D134}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>GB_CSharp_Level1_Lesson_7</RootNamespace>
-    <AssemblyName>GB-CSharp-Level1-Lesson_7</AssemblyName>
+    <RootNamespace>_1_GameDoubler</RootNamespace>
+    <AssemblyName>1_GameDoubler</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -100,16 +100,16 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\contact-lens.png" />
+    <EmbeddedResource Include="Resources\contact-lens.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\ar-glasses.png" />
+    <EmbeddedResource Include="Resources\ar-glasses.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\idea %281%29.png" />
+    <EmbeddedResource Include="Resources\idea %281%29.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\idea.png" />
+    <EmbeddedResource Include="Resources\idea.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
